# Dio_curso_python_vivo

./: README.md
BancoDados/: conexao.py  diobank.sqlite
SimuladorBancoOrientadoObjeto/: README.md  banco_oo.py
TDD project/: pyproject.toml
TDD project/store/controllers/: product.py
TDD project/store/db/: mongo.py
TDD project/store/models/: base.py
TDD project/store/schemas/: base.py  product.py
TDD project/store/usecases/: product.py
TDD project/tests/: conftest.py  factories.py
TDD project/tests/controllers/: test_product.py
TDD project/tests/schemas/: test_product.py
WORKOUT_API/: Makefile  alembic.ini  requirements.txt
WORKOUT_API/alembic/: env.py
WORKOUT_API/atleta/: models.py  schemas.py
WORKOUT_API/workout_api/: routers.py
WORKOUT_API/workout_api/atleta/: controler.py  models.py  schemas.py
WORKOUT_API/workout_api/categoria/: controller.py  models.py  schemas.py
WORKOUT_API/workout_api/centro_treinamento/: controller.py  models.py  schemas.py
WORKOUT_API/workout_api/configs/: database.py  settings.py
WORKOUT_API/workout_api/contrib/: models.py  schemas.py
WORKOUT_API/workout_api/contrib/repository/: dependencies.py  models.py
desafio1-simuladorBancario/: sistema_bancario.py
simuladorBancarioFuncional/: sistemaBancarioFucional.py
