[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["valteciraragao <valteciraragao@poli.ufrj.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
motor = "^3.5.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
